# parsers

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MIGRATION.md  PLAN.md  README.md  __init__.py  base.py  docker-compose.yml  docx_parser.py  grpc_service.py  local_service.py  md_parser.py  models.py  narrative_optimizer.py  ocr_engine.py  ocr_worker.py  page_processor.py  pdf_parser.py  pptx_parser.py  pyproject.toml  service_interface.py  技术选项分析.md
docs/: 启动指南.md  调用方使用指南.md
grpc/: client.py  server.py
grpc/protos/: parser.proto
grpc_service/: client.py  server.py
grpc_service/protos/: parser.proto
scripts/: docker_start.sh  generate_proto.sh  grpc_health_check.sh  start.sh  start_grpc_server.sh  stop.sh  test_grpc_server.py  test_parser_services.py
